--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ JogoDaVelha/.classpath
 Lista 3 Java/Lista 3 Java (Métodos)/Ex22.java
 JogoDaVelha/.project
 JogoDaVelha/bin/Jogo.class
+ProjetoFaClube/src/main/webapp/META-INF/MANIFEST.MF
+ProjetoFaClube/.settings/org.eclipse.wst.jsdt.ui.superType.name
+ProjetoFaClube/.settings/org.eclipse.wst.jsdt.ui.superType.container
+FabricaDeCarros/bin/Visualizacao/EntradaSaida.class
